ligas terminadas(aparentemmente)